# HeartMulaApp

./: .gitignore  README.md  bootstrap_AIMusicApp.bat  launch_AIMusicApp.bat  pyproject.toml  requirements.txt  run_desktop_regression_AIMusicApp.bat  run_regression_AIMusicApp.bat  setup_acestep15_env.bat  setup_acestep_env.bat  setup_app_env.bat  setup_heartmula_env.bat  setup_melodyflow_env.bat
config/: model_support.example.json
docs/: heartlib-pr-plan.md  melodyflow-local-recovery.md
tests/: test_bootstrap_and_model_downloads.py  test_compare_music_models_integration.py  test_music_backend_checks.py  test_music_compare_gui_desktop.py  test_music_compare_gui_settings.py  test_music_model_backends.py  test_setup_backend_env.py
tools/ai/: check_music_backends.py  compare_music_models.py  download_hf_repo.py  music_backend_checks.py  music_compare_gui.py  music_model_backends.py  run_acestep15_backend.py  run_acestep_backend.py  run_audiox_backend.py  run_heartmula_backend.py  run_melodyflow_backend.py  setup_comparison_model_repos.py  setup_heartmula_checkpoints.py
tools/audio/: ffmpeg_runtime.py  separate_vocals.py
tools/common/: bootstrap_aimusicapp.py  setup_backend_env.py
tools/voice/: run_hearttranscriptor.py  transcribe_lyrics.py
